--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "engines": {
     "node": ">= 7.6.0"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "scripts": {
     "start": "node ./start.js",
     "watch": "nodemon ./start.js --ignore public/",
     "dev": "concurrently \"npm run watch\" \"npm run assets\" --names \"💻,📦\" --prefix name",
     "assets": "webpack -w --display-max-modules 0",
-    "test": "NODE_ENV=test jest"
+    "test": "jest --watch NODE_ENV=development",
+    "test-m": "mocha ./__tests__/app.tests.js"
   },
   "browserslist": "last 3 versions",
   "dependencies": {
@@ -25,7 +29,6 @@
     "express": "^4.15.2",
     "express-session": "^1.15.1",
     "express-validator": "^3.1.2",
-    "faker": "^4.1.0",
     "forever": "^0.15.3",
     "glob": "^7.1.1",
     "html-to-text": "^3.2.0",
@@ -60,10 +63,13 @@
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "jest": "^21.2.1",
+    "mocha": "^4.0.1",
+    "mongodb-memory-server": "^1.6.3",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "postcss-loader": "^1.3.3",
     "sass-loader": "^6.0.3",
+    "supertest": "^3.0.0",
     "webpack": "^2.2.1"
   }
 }
