--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "md5": "^2.2.1",
     "moment": "^2.17.1",
     "mongoose": "^4.8.7",
+    "mongoose-beautiful-unique-validation": "^7.0.0",
     "mongoose-mongodb-errors": "^0.0.2",
     "multer": "^1.3.0",
     "nodemailer": "^3.1.5",
