--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-validator": "^3.1.2",
     "forever": "^0.15.3",
     "glob": "^7.1.1",
+    "html-loader": "^0.5.1",
     "html-to-text": "^3.2.0",
     "jimp": "^0.2.27",
     "juice": "^4.0.2",
@@ -45,6 +46,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "pug": "^2.0.0-beta6",
+    "pug-html-loader": "^1.1.5",
     "slugs": "^0.1.3",
     "uuid": "^3.0.1",
     "validator": "^7.0.0"
