--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "juice": "^4.0.2",
     "md5": "^2.2.1",
     "moment": "^2.17.1",
-    "mongoose": "^4.8.7",
+    "mongoose": "5.0.0-rc2",
     "mongoose-beautiful-unique-validation": "^7.0.0",
     "mongoose-mongodb-errors": "^0.0.2",
     "multer": "^1.3.0",
